--- a/versuch_3/versuchsdurchfuehrung.tex
+++ b/versuch_3/versuchsdurchfuehrung.tex
@@ -4,11 +4,11 @@ Eine Skizze des Versuchsaufbaus ist in auf Seite
 \pageref{pic:skizze_versuchsaufbau} im Anhang zu finden.
 Für ein Doppelpendel, das auch Überschläge des unteren Pendelglieds erlaubt, mussten die Verbindungen der Pendelmassen als Stäbe gebaut werden. Dabei galt es zu beachten, dass ein möglichst geringer Teil der Gesamtmasse in den Pendelstäben liegt. Die Wahl des Materials fiel auf Acryl, da es bei relativ geringem Gewicht die erforderliche Steifigkeit liefern kann. Das obere Pendelglied wurde symmetrisch auf beiden Seiten des Pendels gebaut um Kräfte zu vermeiden, die in Schwingungen außerhalb der gewünschten Ebene verursacht hätten. Für den unteren Stab wurde eine Materialstärke von $5 mm$ gewählt, für den oberen Stab war aufgrund der doppelten Ausführung eine Stärke von $3 mm$ ausreichend.
 %(Genaue Maße der Platte siehe Abb. \ref{})
-Auch diese dünne Materialstärke liefert ein Gewicht von $70 g$ pro Stab konnte aber aufgrund der Anforderungen an die Steifigkeit und Kosteneffizienz nicht unterschritten werden.\\
+Auch diese dünne Materialstärke liefert ein Gewicht von $70  g$ pro Stab konnte aber aufgrund der Anforderungen an die Steifigkeit und Kosteneffizienz nicht unterschritten werden.\\
 %70 g obere Platte
 
 Um ein möglichst einfaches Modell zu erhalten wurde versucht die Reibung in den Achsen des Pendels zu minimieren. Die Lagerung wurde durch Kugellager der Firma FAG realisiert. Es wurden zwei Lager in der Aufhängung des Pendels integriert sowie ein weiteres Kugellager in der oberen Masse.
-Die Gewindestange, das Kugellager sowie die sechs Schrauben und Muttern der oberen Masse kommen zu einer Masse m1 von $301 g$ zusammen. Um das Modell zu vereinfachen wurde versucht eine möglichst gleiche Masse für m2 zu finden. Hier kam ein Gewicht aus dem Lager des Projektpraktikums mit einer Masse von $297 g$ zum Einsatz.
+Die Gewindestange, das Kugellager sowie die sechs Schrauben und Muttern der oberen Masse kommen zu einer Masse $ m_1$ von $301 g$ zusammen. Um das Modell zu vereinfachen wurde versucht eine möglichst gleiche Masse für $ m_2 $ zu finden. Hier kam ein Gewicht aus dem Lager des Projektpraktikums mit einer Masse von $297 g$ zum Einsatz.
 
 \subsection{Messung der Pendelbewegung}
 Um den Aufenthaltsort der Massen in der Pendelebene mit einem geringem zeitlichen Intervall aufzunehmen wurde eine Kamera eingesetzt. Um nach dem Versuch die X, Y Daten in einer Tabelle zu erhalten wurde die Videotracking Software "Tracker" von Open Source Physics eingesetzt.
