auswertung soweit fertig

--- a/versuch_3/ergebnisse.tex
+++ b/versuch_3/ergebnisse.tex
@@ -140,3 +140,21 @@ Aus diesem Grund wurde die Simulation erst bei $ 0.8 s $ begonnen. Dieser spezie
 Dabei wurden die in Abb. \ref{x1_ueber_t}, \ref{y1_ueber_t}, \ref{x2_ueber_t} und Abb. \ref{y2_ueber_t} dargestellten Ergebnisse erzielt, wobei der rote Graph die Simulation darstellt und der grüne die tatsächlich gemessenen Werte. \\
 Es ist deutlich sichtbar, dass die Verläufe bis etwa $ t = 2 s $ recht gut mit den Messwerten übereinstimmen, danach ergeben sich vor allem bei den $x_2- $ und $ y_1$-Koordinaten deutliche Unterschiede, wohingegen bei den anderen beiden Koordinaten noch länger eine deutliche Ähnlichkeit bestehen bleibt. Die Ähnlichkeit ist zum Teil auch darauf zurückzuführen, dass das Pendel bei dieser Messung kein deutlich ausgeprägtes chaotisches Verhalten besitzt, sondern eher periodische Eigenschaften aufweist. \\
 Trotzdem eignet sich die Simulation scheinbar gut, um die Bewegung des Pendels nachzuvollziehen. 
+
+\begin{figure}
+        \includegraphics[width=.9\textwidth]{images/phi1_ueberphi1.png}
+\caption{Phasenraum $\dot{\varphi_1} $ über $\varphi_1$}
+\label{phi1}
+\end{figure}
+
+\begin{figure}
+        \includegraphics[width=.9\textwidth]{images/phi2_ueberphi2.png}
+\caption{Phasenraum $\dot{\varphi_2} $ über $\varphi_2$}
+\label{phi2}
+\end{figure}
+
+Weiter sind die sich aus den gemessenen Daten ergebenden Phasenraumdiagramme in Abb. \ref{phi1} und Abb. \ref{phi2} dargestellt. Es ergibt sich dabei ein Verlauf, der plausibel erscheint, da sie sehr dem in Abb. \ref{pic:pendel_einfach} ähnelt, welches das Phasenraumdiagramm eines einfachen Pendels zeigt. Der Grund dafür liegt darin, dass auch das Doppelpendel in dem hier dargestellten Energiebereich leldiglich \enquote{hin und her schwankt}, sodass eine in Näherung ellipsenförmige, auf jeden Fall aber \enquote{geschlossene} Kurve entsteht. \\
+Trotzdem gibt es Abweichungen zum einfachen Pendel. Zunächst schneiden sich hier die Linien im Phasenraumdiagramm, was allerdings darauf zurückzuführen ist, dass die Auftragungen nur eine Projektion des gesamten, vierdimensionalen Phasenraums darstellen. Weiter erscheint das Diagramm vor allem bei dem oberen Pendel (\ref{phi1}) seitlich \enquote{unscharf}, was durch die Beeinflussung durch das untere Pendel zu erklären ist. 
+
+\section{Fazit}
+Es zeigt sich, dass das Doppelpendel, wie zu erwarten, chaotisches Verhalten aufweist. Darüber hinaus ist es möglich, die Bewegung des Doppelpendels in über mehrere \enquote{Schwingungen} nachzuvollziehen, wohingegen eine analytische Lösung der in der Theorie aufgestellten Bewegungsgleichung unmöglich ist. 
