--- a/versuch_3/anhang.tex
+++ b/versuch_3/anhang.tex
@@ -1,21 +1,710 @@
 \section{Anhang}
 \nopagebreak
+
 \begin{table}[h]
 \scriptsize
 \centering
 \begin{tabular}{rllll}
 t & x-Pos. $m_1$ & y-Pos $m_1$ & x-Pos. $m_2$ & y-Pos. $m_2$ \\
 \toprule
+$0.0$&$-0.178$&$-0.237$&$-0.002$&$-0.332$\\
+$0.033$&$-0.182$&$-0.235$&$0.004$&$-0.311$\\
+$0.066$&$-0.18$&$-0.236$&$0.011$&$-0.3$\\
+$0.100$&$-0.173$&$-0.241$&$0.019$&$-0.299$\\
+$0.133$&$-0.162$&$-0.249$&$0.03$&$-0.309$\\
+$0.166$&$-0.146$&$-0.26$&$0.043$&$-0.331$\\
+$0.200$&$-0.124$&$-0.271$&$0.056$&$-0.365$\\
+$0.233$&$-0.093$&$-0.284$&$0.068$&$-0.409$\\
+$0.266$&$-0.051$&$-0.295$&$0.071$&$-0.46$\\
+$0.300$&$0.01$&$-0.3$&$0.058$&$-0.493$\\
+$0.333$&$0.078$&$-0.29$&$0.038$&$-0.475$\\
+$0.367$&$0.128$&$-0.272$&$0.026$&$-0.434$\\
+$0.400$&$0.16$&$-0.255$&$0.022$&$-0.391$\\
+$0.433$&$0.181$&$-0.24$&$0.023$&$-0.355$\\
+$0.467$&$0.196$&$-0.229$&$0.025$&$-0.327$\\
+$0.500$&$0.204$&$-0.221$&$0.027$&$-0.309$\\
+$0.533$&$0.209$&$-0.217$&$0.029$&$-0.301$\\
+$0.567$&$0.209$&$-0.217$&$0.029$&$-0.304$\\
+$0.600$&$0.204$&$-0.221$&$0.029$&$-0.318$\\
+$0.633$&$0.195$&$-0.229$&$0.029$&$-0.345$\\
+$0.667$&$0.179$&$-0.242$&$0.031$&$-0.382$\\
+$0.700$&$0.153$&$-0.259$&$0.037$&$-0.428$\\
+$0.734$&$0.114$&$-0.279$&$0.051$&$-0.474$\\
+$0.767$&$0.052$&$-0.296$&$0.073$&$-0.491$\\
+$0.800$&$-0.016$&$-0.299$&$0.084$&$-0.46$\\
+$0.834$&$-0.066$&$-0.292$&$0.081$&$-0.416$\\
+$0.867$&$-0.101$&$-0.281$&$0.07$&$-0.375$\\
+$0.900$&$-0.127$&$-0.27$&$0.056$&$-0.342$\\
+$0.934$&$-0.147$&$-0.259$&$0.042$&$-0.318$\\
+$0.967$&$-0.161$&$-0.25$&$0.029$&$-0.305$\\
+$1$&$-0.172$&$-0.242$&$0.018$&$-0.302$\\
+$1.034$&$-0.177$&$-0.238$&$0.009$&$-0.311$\\
+$1.067$&$-0.178$&$-0.237$&$0.001$&$-0.33$\\
+$1.101$&$-0.173$&$-0.242$&$-0.009$&$-0.361$\\
+$1.134$&$-0.159$&$-0.251$&$-0.021$&$-0.401$\\
+$1.167$&$-0.135$&$-0.266$&$-0.038$&$-0.448$\\
+$1.201$&$-0.092$&$-0.285$&$-0.063$&$-0.485$\\
+$1.234$&$-0.028$&$-0.299$&$-0.087$&$-0.479$\\
+$1.267$&$0.031$&$-0.299$&$-0.092$&$-0.44$\\
+$1.301$&$0.073$&$-0.291$&$-0.084$&$-0.397$\\
+$1.334$&$0.106$&$-0.282$&$-0.069$&$-0.359$\\
+$1.368$&$0.131$&$-0.271$&$-0.052$&$-0.331$\\
+$1.401$&$0.152$&$-0.26$&$-0.035$&$-0.312$\\
+$1.434$&$0.169$&$-0.249$&$-0.018$&$-0.303$\\
+$1.468$&$0.182$&$-0.24$&$-0.003$&$-0.305$\\
+$1.501$&$0.191$&$-0.233$&$0.012$&$-0.318$\\
+$1.534$&$0.194$&$-0.23$&$0.029$&$-0.342$\\
+$1.568$&$0.191$&$-0.233$&$0.049$&$-0.377$\\
+$1.601$&$0.178$&$-0.243$&$0.074$&$-0.419$\\
+$1.634$&$0.152$&$-0.26$&$0.106$&$-0.46$\\
+$1.668$&$0.105$&$-0.282$&$0.143$&$-0.476$\\
+$1.701$&$0.043$&$-0.297$&$0.161$&$-0.446$\\
+$1.735$&$-0.004$&$-0.3$&$0.158$&$-0.4$\\
+$1.768$&$-0.038$&$-0.297$&$0.145$&$-0.358$\\
+$1.801$&$-0.065$&$-0.292$&$0.127$&$-0.323$\\
+$1.835$&$-0.086$&$-0.286$&$0.109$&$-0.298$\\
+$1.868$&$-0.104$&$-0.28$&$0.091$&$-0.282$\\
+$1.901$&$-0.12$&$-0.273$&$0.076$&$-0.277$\\
+$1.935$&$-0.132$&$-0.267$&$0.064$&$-0.282$\\
+$1.968$&$-0.141$&$-0.262$&$0.054$&$-0.298$\\
+$2.002$&$-0.144$&$-0.26$&$0.044$&$-0.326$\\
+$2.035$&$-0.141$&$-0.262$&$0.032$&$-0.364$\\
+$2.068$&$-0.129$&$-0.269$&$0.014$&$-0.412$\\
+$2.102$&$-0.103$&$-0.28$&$-0.012$&$-0.463$\\
+$2.135$&$-0.057$&$-0.294$&$-0.049$&$-0.492$\\
+$2.168$&$0.005$&$-0.3$&$-0.078$&$-0.469$\\
+$2.202$&$0.051$&$-0.296$&$-0.089$&$-0.423$\\
+$2.235$&$0.082$&$-0.289$&$-0.088$&$-0.376$\\
+$2.268$&$0.104$&$-0.282$&$-0.081$&$-0.336$\\
+$2.302$&$0.119$&$-0.276$&$-0.071$&$-0.304$\\
+$2.335$&$0.131$&$-0.271$&$-0.061$&$-0.283$\\
+$2.369$&$0.141$&$-0.266$&$-0.052$&$-0.27$\\
+$2.402$&$0.148$&$-0.262$&$-0.045$&$-0.268$\\
+$2.435$&$0.152$&$-0.26$&$-0.041$&$-0.276$\\
+$2.469$&$0.153$&$-0.259$&$-0.038$&$-0.296$\\
+$2.502$&$0.15$&$-0.261$&$-0.035$&$-0.327$\\
+$2.535$&$0.141$&$-0.266$&$-0.029$&$-0.369$\\
+$2.569$&$0.124$&$-0.274$&$-0.016$&$-0.42$\\
+$2.602$&$0.092$&$-0.286$&$0.008$&$-0.472$\\
+$2.635$&$0.038$&$-0.298$&$0.046$&$-0.494$\\
+$2.669$&$-0.022$&$-0.299$&$0.074$&$-0.463$\\
+$2.702$&$-0.063$&$-0.292$&$0.087$&$-0.414$\\
+$2.736$&$-0.087$&$-0.286$&$0.09$&$-0.367$\\
+$2.769$&$-0.102$&$-0.28$&$0.088$&$-0.326$\\
+$2.802$&$-0.111$&$-0.277$&$0.085$&$-0.295$\\
+$2.836$&$-0.115$&$-0.275$&$0.081$&$-0.273$\\
+$2.869$&$-0.115$&$-0.275$&$0.079$&$-0.261$\\
+$2.902$&$-0.113$&$-0.276$&$0.081$&$-0.259$\\
+$2.936$&$-0.109$&$-0.278$&$0.086$&$-0.266$\\
+$2.969$&$-0.102$&$-0.281$&$0.094$&$-0.285$\\
+$3.003$&$-0.091$&$-0.284$&$0.103$&$-0.315$\\
+$3.036$&$-0.075$&$-0.289$&$0.111$&$-0.357$\\
+$3.069$&$-0.051$&$-0.295$&$0.114$&$-0.41$\\
+$3.103$&$-0.013$&$-0.299$&$0.103$&$-0.465$\\
+$3.136$&$0.043$&$-0.297$&$0.071$&$-0.491$\\
+$3.169$&$0.098$&$-0.284$&$0.036$&$-0.465$\\
+$3.203$&$0.133$&$-0.27$&$0.012$&$-0.421$\\
+$3.236$&$0.152$&$-0.26$&$-0.005$&$-0.378$\\
+$3.269$&$0.161$&$-0.255$&$-0.016$&$-0.341$\\
+$3.303$&$0.163$&$-0.253$&$-0.025$&$-0.312$\\
+$3.336$&$0.16$&$-0.255$&$-0.032$&$-0.293$\\
+$3.370$&$0.153$&$-0.26$&$-0.041$&$-0.283$\\
+$3.403$&$0.142$&$-0.265$&$-0.051$&$-0.284$\\
+$3.436$&$0.129$&$-0.272$&$-0.063$&$-0.295$\\
+$3.470$&$0.113$&$-0.279$&$-0.077$&$-0.318$\\
+$3.503$&$0.093$&$-0.286$&$-0.09$&$-0.353$\\
+$3.536$&$0.067$&$-0.293$&$-0.1$&$-0.399$\\
+$3.570$&$0.031$&$-0.298$&$-0.098$&$-0.451$\\
+$3.603$&$-0.02$&$-0.299$&$-0.077$&$-0.488$\\
+$3.636$&$-0.079$&$-0.288$&$-0.043$&$-0.476$\\
+$3.670$&$-0.118$&$-0.273$&$-0.016$&$-0.437$\\
+$3.703$&$-0.14$&$-0.262$&$0.004$&$-0.395$\\
+$3.737$&$-0.151$&$-0.256$&$0.019$&$-0.359$\\
+$3.770$&$-0.153$&$-0.255$&$0.032$&$-0.33$\\
+$3.803$&$-0.148$&$-0.257$&$0.044$&$-0.31$\\
+$3.837$&$-0.139$&$-0.263$&$0.056$&$-0.301$\\
+$3.870$&$-0.125$&$-0.27$&$0.071$&$-0.301$\\
+$3.903$&$-0.107$&$-0.278$&$0.088$&$-0.313$\\
+$3.937$&$-0.085$&$-0.286$&$0.107$&$-0.336$\\
+$3.970$&$-0.058$&$-0.293$&$0.126$&$-0.371$\\
+$4.004$&$-0.023$&$-0.298$&$0.14$&$-0.416$\\
+$4.037$&$0.023$&$-0.299$&$0.14$&$-0.463$\\
+$4.070$&$0.083$&$-0.289$&$0.118$&$-0.481$\\
+$4.104$&$0.135$&$-0.269$&$0.09$&$-0.455$\\
+$4.137$&$0.167$&$-0.25$&$0.068$&$-0.418$\\
+$4.170$&$0.186$&$-0.237$&$0.051$&$-0.382$\\
+$4.204$&$0.195$&$-0.229$&$0.038$&$-0.352$\\
+$4.237$&$0.198$&$-0.227$&$0.027$&$-0.331$\\
+$4.270$&$0.195$&$-0.229$&$0.016$&$-0.319$\\
+$4.304$&$0.187$&$-0.236$&$0.005$&$-0.318$\\
+$4.337$&$0.175$&$-0.245$&$-0.007$&$-0.329$\\
+$4.371$&$0.158$&$-0.256$&$-0.019$&$-0.35$\\
+$4.404$&$0.135$&$-0.269$&$-0.031$&$-0.384$\\
+$4.437$&$0.104$&$-0.282$&$-0.038$&$-0.427$\\
+$4.471$&$0.06$&$-0.294$&$-0.036$&$-0.473$\\
+$4.504$&$0$&$-0.3$&$-0.019$&$-0.495$\\
+$4.537$&$-0.064$&$-0.292$&$-0.001$&$-0.472$\\
+$4.571$&$-0.108$&$-0.278$&$0.009$&$-0.431$\\
+$4.604$&$-0.136$&$-0.264$&$0.012$&$-0.392$\\
+$4.637$&$-0.155$&$-0.253$&$0.012$&$-0.359$\\
+$4.671$&$-0.166$&$-0.245$&$0.012$&$-0.335$\\
+$4.704$&$-0.172$&$-0.241$&$0.011$&$-0.322$\\
+$4.738$&$-0.173$&$-0.241$&$0.012$&$-0.318$\\
+$4.771$&$-0.169$&$-0.244$&$0.015$&$-0.326$\\
+$4.804$&$-0.16$&$-0.25$&$0.018$&$-0.345$\\
+$4.838$&$-0.145$&$-0.259$&$0.022$&$-0.375$\\
+$4.871$&$-0.122$&$-0.271$&$0.023$&$-0.416$\\
+$4.904$&$-0.087$&$-0.285$&$0.018$&$-0.462$\\
+$4.938$&$-0.034$&$-0.297$&$0.002$&$-0.495$\\
+$4.971$&$0.033$&$-0.298$&$-0.016$&$-0.482$\\
+$5.005$&$0.086$&$-0.288$&$-0.023$&$-0.444$\\
+$5.038$&$0.123$&$-0.274$&$-0.02$&$-0.403$\\
+$5.071$&$0.149$&$-0.261$&$-0.013$&$-0.369$\\
+$5.105$&$0.169$&$-0.249$&$-0.004$&$-0.343$\\
+$5.138$&$0.183$&$-0.239$&$0.006$&$-0.327$\\
+$5.171$&$0.192$&$-0.232$&$0.015$&$-0.322$\\
+$5.205$&$0.197$&$-0.227$&$0.024$&$-0.328$\\
+$5.238$&$0.198$&$-0.227$&$0.034$&$-0.344$\\
+$5.271$&$0.192$&$-0.232$&$0.045$&$-0.371$\\
+$5.305$&$0.179$&$-0.242$&$0.059$&$-0.408$\\
+$5.338$&$0.155$&$-0.258$&$0.079$&$-0.45$\\
+$5.372$&$0.114$&$-0.278$&$0.107$&$-0.481$\\
+$5.405$&$0.052$&$-0.296$&$0.129$&$-0.472$\\
+$5.438$&$-0.003$&$-0.299$&$0.132$&$-0.433$\\
+$5.472$&$-0.044$&$-0.296$&$0.123$&$-0.392$\\
+$5.505$&$-0.074$&$-0.289$&$0.107$&$-0.358$\\
+$5.538$&$-0.098$&$-0.281$&$0.091$&$-0.332$\\
+$5.572$&$-0.118$&$-0.273$&$0.074$&$-0.317$\\
+$5.605$&$-0.133$&$-0.266$&$0.059$&$-0.311$\\
+$5.638$&$-0.144$&$-0.26$&$0.045$&$-0.317$\\
+$5.672$&$-0.151$&$-0.256$&$0.033$&$-0.333$\\
+$5.705$&$-0.152$&$-0.255$&$0.019$&$-0.361$\\
+$5.739$&$-0.145$&$-0.259$&$0.002$&$-0.399$\\
+$5.772$&$-0.128$&$-0.268$&$-0.02$&$-0.443$\\
+$5.805$&$-0.095$&$-0.283$&$-0.051$&$-0.482$\\
+$5.839$&$-0.041$&$-0.296$&$-0.084$&$-0.485$\\
+$5.872$&$0.015$&$-0.299$&$-0.1$&$-0.449$\\
+$5.905$&$0.054$&$-0.295$&$-0.101$&$-0.405$\\
+$5.939$&$0.082$&$-0.288$&$-0.093$&$-0.366$\\
+$5.972$&$0.103$&$-0.282$&$-0.082$&$-0.334$\\
+$6.006$&$0.12$&$-0.275$&$-0.069$&$-0.312$\\
+$6.039$&$0.134$&$-0.269$&$-0.057$&$-0.3$\\
+$6.072$&$0.145$&$-0.263$&$-0.046$&$-0.298$\\
+$6.106$&$0.153$&$-0.259$&$-0.036$&$-0.307$\\
+$6.139$&$0.157$&$-0.256$&$-0.027$&$-0.327$\\
+$6.172$&$0.156$&$-0.257$&$-0.015$&$-0.359$\\
+$6.206$&$0.148$&$-0.262$&$0.001$&$-0.401$\\
+$6.239$&$0.129$&$-0.271$&$0.025$&$-0.448$\\
+$6.272$&$0.093$&$-0.285$&$0.059$&$-0.486$\\
+$6.306$&$0.037$&$-0.298$&$0.096$&$-0.482$\\
+$6.339$&$-0.014$&$-0.299$&$0.114$&$-0.441$\\
+$6.373$&$-0.047$&$-0.295$&$0.119$&$-0.394$\\
+$6.406$&$-0.069$&$-0.29$&$0.116$&$-0.352$\\
+$6.439$&$-0.083$&$-0.286$&$0.109$&$-0.318$\\
+$6.473$&$-0.093$&$-0.283$&$0.102$&$-0.294$\\
+$6.506$&$-0.099$&$-0.281$&$0.096$&$-0.279$\\
+$6.539$&$-0.103$&$-0.28$&$0.092$&$-0.275$\\
+$6.573$&$-0.104$&$-0.279$&$0.091$&$-0.281$\\
+$6.606$&$-0.102$&$-0.28$&$0.092$&$-0.298$\\
+$6.639$&$-0.097$&$-0.282$&$0.095$&$-0.326$\\
+$6.673$&$-0.087$&$-0.285$&$0.095$&$-0.366$\\
+$6.706$&$-0.067$&$-0.291$&$0.09$&$-0.416$\\
+$6.740$&$-0.035$&$-0.297$&$0.074$&$-0.468$\\
+$6.773$&$0.015$&$-0.299$&$0.04$&$-0.495$\\
+$6.806$&$0.071$&$-0.292$&$0.005$&$-0.472$\\
+$6.840$&$0.107$&$-0.281$&$-0.017$&$-0.429$\\
+$6.873$&$0.128$&$-0.272$&$-0.031$&$-0.386$\\
+$6.906$&$0.139$&$-0.267$&$-0.039$&$-0.349$\\
+$6.940$&$0.143$&$-0.264$&$-0.045$&$-0.321$\\
+$6.973$&$0.143$&$-0.265$&$-0.049$&$-0.301$\\
+$7.007$&$0.139$&$-0.267$&$-0.054$&$-0.292$\\
+$7.040$&$0.132$&$-0.27$&$-0.061$&$-0.293$\\
+$7.073$&$0.123$&$-0.275$&$-0.069$&$-0.306$\\
+$7.107$&$0.11$&$-0.28$&$-0.078$&$-0.329$\\
+$7.140$&$0.094$&$-0.285$&$-0.086$&$-0.364$\\
+$7.173$&$0.071$&$-0.292$&$-0.09$&$-0.41$\\
+$7.207$&$0.037$&$-0.298$&$-0.082$&$-0.46$\\
+$7.240$&$-0.012$&$-0.299$&$-0.055$&$-0.492$\\
+$7.273$&$-0.068$&$-0.291$&$-0.02$&$-0.477$\\
+$7.307$&$-0.105$&$-0.279$&$0.006$&$-0.438$\\
+$7.340$&$-0.125$&$-0.27$&$0.024$&$-0.397$\\
+$7.374$&$-0.135$&$-0.265$&$0.038$&$-0.362$\\
+$7.407$&$-0.136$&$-0.264$&$0.049$&$-0.334$\\
+$7.440$&$-0.132$&$-0.267$&$0.06$&$-0.316$\\
+$7.474$&$-0.122$&$-0.271$&$0.072$&$-0.308$\\
+$7.507$&$-0.109$&$-0.277$&$0.085$&$-0.31$\\
+$7.540$&$-0.092$&$-0.284$&$0.1$&$-0.324$\\
+$7.574$&$-0.072$&$-0.29$&$0.117$&$-0.349$\\
+$7.607$&$-0.045$&$-0.296$&$0.132$&$-0.386$\\
+$7.640$&$-0.011$&$-0.299$&$0.141$&$-0.431$\\
+$7.674$&$0.036$&$-0.298$&$0.134$&$-0.473$\\
+$7.707$&$0.093$&$-0.286$&$0.106$&$-0.479$\\
+$7.741$&$0.138$&$-0.267$&$0.078$&$-0.45$\\
+$7.774$&$0.165$&$-0.252$&$0.057$&$-0.415$\\
+$7.807$&$0.18$&$-0.241$&$0.04$&$-0.382$\\
+$7.841$&$0.187$&$-0.236$&$0.027$&$-0.356$\\
+$7.874$&$0.187$&$-0.236$&$0.015$&$-0.339$\\
+$7.907$&$0.182$&$-0.24$&$0.004$&$-0.332$\\
+$7.941$&$0.172$&$-0.247$&$-0.008$&$-0.335$\\
+$7.974$&$0.157$&$-0.257$&$-0.02$&$-0.35$\\
+$8.008$&$0.138$&$-0.268$&$-0.032$&$-0.376$\\
+$8.041$&$0.111$&$-0.28$&$-0.041$&$-0.413$\\
+$8.074$&$0.075$&$-0.291$&$-0.043$&$-0.457$\\
+$8.108$&$0.023$&$-0.299$&$-0.032$&$-0.492$\\
+$8.141$&$-0.04$&$-0.297$&$-0.012$&$-0.487$\\
+$8.174$&$-0.09$&$-0.284$&$0.003$&$-0.452$\\
+$8.208$&$-0.123$&$-0.271$&$0.009$&$-0.414$\\
+$8.241$&$-0.144$&$-0.26$&$0.012$&$-0.38$\\
+$8.274$&$-0.157$&$-0.252$&$0.012$&$-0.355$\\
+$8.308$&$-0.164$&$-0.247$&$0.013$&$-0.339$\\
+$8.341$&$-0.166$&$-0.246$&$0.014$&$-0.333$\\
+$8.375$&$-0.162$&$-0.248$&$0.017$&$-0.338$\\
+$8.408$&$-0.154$&$-0.254$&$0.02$&$-0.355$\\
+$8.441$&$-0.14$&$-0.262$&$0.023$&$-0.382$\\
+$8.475$&$-0.118$&$-0.273$&$0.024$&$-0.42$\\
+$8.508$&$-0.085$&$-0.286$&$0.019$&$-0.463$\\
+$8.541$&$-0.034$&$-0.297$&$0.003$&$-0.495$\\
+$8.575$&$0.03$&$-0.298$&$-0.015$&$-0.484$\\
+$8.608$&$0.082$&$-0.289$&$-0.022$&$-0.449$\\
+$8.641$&$0.118$&$-0.276$&$-0.021$&$-0.411$\\
+$8.675$&$0.144$&$-0.264$&$-0.014$&$-0.378$\\
+$8.708$&$0.163$&$-0.253$&$-0.006$&$-0.354$\\
+$8.742$&$0.176$&$-0.244$&$0.003$&$-0.34$\\
+$8.775$&$0.185$&$-0.237$&$0.013$&$-0.337$\\
+$8.808$&$0.19$&$-0.234$&$0.022$&$-0.344$\\
+$8.842$&$0.189$&$-0.235$&$0.032$&$-0.362$\\
+$8.875$&$0.182$&$-0.24$&$0.045$&$-0.391$\\
+$8.908$&$0.166$&$-0.251$&$0.061$&$-0.427$\\
+$8.942$&$0.139$&$-0.267$&$0.084$&$-0.466$\\
+$8.975$&$0.092$&$-0.286$&$0.113$&$-0.484$\\
+$9.009$&$0.032$&$-0.298$&$0.13$&$-0.462$\\
+$9.042$&$-0.016$&$-0.299$&$0.13$&$-0.422$\\
+$9.075$&$-0.05$&$-0.295$&$0.12$&$-0.385$\\
+$9.109$&$-0.077$&$-0.288$&$0.106$&$-0.355$\\
+$9.142$&$-0.098$&$-0.282$&$0.091$&$-0.334$\\
+$9.175$&$-0.114$&$-0.275$&$0.076$&$-0.323$\\
+$9.209$&$-0.127$&$-0.269$&$0.063$&$-0.322$\\
+$9.242$&$-0.136$&$-0.265$&$0.05$&$-0.333$\\
+$9.275$&$-0.139$&$-0.263$&$0.038$&$-0.355$\\
+$9.309$&$-0.136$&$-0.264$&$0.023$&$-0.387$\\
+$9.342$&$-0.124$&$-0.27$&$0.004$&$-0.428$\\
+$9.376$&$-0.099$&$-0.281$&$-0.023$&$-0.47$\\
+$9.409$&$-0.056$&$-0.294$&$-0.058$&$-0.492$\\
+$9.442$&$0$&$-0.299$&$-0.084$&$-0.47$\\
+$9.476$&$0.043$&$-0.297$&$-0.094$&$-0.428$\\
+$9.509$&$0.072$&$-0.291$&$-0.093$&$-0.388$\\
+$9.542$&$0.093$&$-0.285$&$-0.087$&$-0.354$\\
+$9.576$&$0.109$&$-0.28$&$-0.078$&$-0.328$\\
+$9.609$&$0.121$&$-0.275$&$-0.069$&$-0.313$\\
+$9.642$&$0.131$&$-0.271$&$-0.06$&$-0.307$\\
+$9.676$&$0.137$&$-0.267$&$-0.053$&$-0.312$\\
+$9.709$&$0.141$&$-0.265$&$-0.045$&$-0.329$\\
+$9.743$&$0.139$&$-0.266$&$-0.037$&$-0.356$\\
+$9.776$&$0.132$&$-0.27$&$-0.025$&$-0.395$\\
+$9.809$&$0.115$&$-0.277$&$-0.006$&$-0.44$\\
+$9.843$&$0.084$&$-0.288$&$0.025$&$-0.482$\\
+$9.876$&$0.034$&$-0.298$&$0.063$&$-0.491$\\
+$9.909$&$-0.018$&$-0.298$&$0.089$&$-0.457$\\
+$9.943$&$-0.052$&$-0.294$&$0.101$&$-0.412$\\
+$9.976$&$-0.072$&$-0.289$&$0.105$&$-0.371$\\
+$10.01$&$-0.085$&$-0.286$&$0.104$&$-0.336$\\
+$10.04$&$-0.091$&$-0.284$&$0.102$&$-0.311$\\
+$10.07$&$-0.094$&$-0.283$&$0.101$&$-0.296$\\
+$10.11$&$-0.094$&$-0.283$&$0.101$&$-0.29$\\
+$10.14$&$-0.092$&$-0.284$&$0.103$&$-0.295$\\
+$10.17$&$-0.086$&$-0.285$&$0.107$&$-0.311$\\
+$10.21$&$-0.078$&$-0.288$&$0.112$&$-0.339$\\
+$10.24$&$-0.064$&$-0.292$&$0.115$&$-0.378$\\
+$10.27$&$-0.041$&$-0.296$&$0.112$&$-0.426$\\
+$10.31$&$-0.006$&$-0.299$&$0.095$&$-0.474$\\
+$10.34$&$0.046$&$-0.296$&$0.06$&$-0.491$\\
+$10.37$&$0.094$&$-0.285$&$0.026$&$-0.465$\\
+$10.41$&$0.123$&$-0.274$&$0.002$&$-0.426$\\
+$10.44$&$0.139$&$-0.266$&$-0.015$&$-0.388$\\
+$10.47$&$0.146$&$-0.263$&$-0.028$&$-0.356$\\
+$10.51$&$0.146$&$-0.262$&$-0.038$&$-0.333$\\
+$10.54$&$0.141$&$-0.265$&$-0.047$&$-0.32$\\
+$10.57$&$0.133$&$-0.269$&$-0.057$&$-0.317$\\
+$10.61$&$0.121$&$-0.274$&$-0.068$&$-0.325$\\
+$10.64$&$0.107$&$-0.28$&$-0.079$&$-0.344$\\
+$10.67$&$0.088$&$-0.287$&$-0.089$&$-0.374$\\
+$10.71$&$0.063$&$-0.293$&$-0.094$&$-0.415$\\
+$10.74$&$0.028$&$-0.298$&$-0.09$&$-0.461$\\
+$10.77$&$-0.021$&$-0.299$&$-0.068$&$-0.49$\\
+$10.81$&$-0.074$&$-0.289$&$-0.036$&$-0.477$\\
+$10.84$&$-0.111$&$-0.277$&$-0.011$&$-0.442$\\
+$10.87$&$-0.132$&$-0.267$&$0.007$&$-0.406$\\
+$10.91$&$-0.142$&$-0.261$&$0.021$&$-0.375$\\
+$10.94$&$-0.144$&$-0.26$&$0.033$&$-0.352$\\
+$10.97$&$-0.14$&$-0.262$&$0.045$&$-0.338$\\
+$11.01$&$-0.131$&$-0.267$&$0.057$&$-0.334$\\
+$11.04$&$-0.117$&$-0.274$&$0.071$&$-0.341$\\
+$11.07$&$-0.099$&$-0.281$&$0.085$&$-0.36$\\
+$11.11$&$-0.075$&$-0.289$&$0.099$&$-0.389$\\
+$11.14$&$-0.043$&$-0.296$&$0.109$&$-0.428$\\
+$11.17$&$-0.001$&$-0.299$&$0.108$&$-0.47$\\
+$11.21$&$0.056$&$-0.295$&$0.09$&$-0.487$\\
+$11.24$&$0.109$&$-0.279$&$0.067$&$-0.466$\\
+$11.27$&$0.145$&$-0.263$&$0.051$&$-0.432$\\
+$11.31$&$0.167$&$-0.25$&$0.04$&$-0.4$\\
+$11.34$&$0.18$&$-0.24$&$0.032$&$-0.373$\\
+$11.37$&$0.187$&$-0.235$&$0.026$&$-0.355$\\
+$11.41$&$0.188$&$-0.235$&$0.021$&$-0.347$\\
+$11.44$&$0.184$&$-0.238$&$0.016$&$-0.35$\\
+$11.47$&$0.175$&$-0.244$&$0.011$&$-0.363$\\
+$11.51$&$0.16$&$-0.254$&$0.008$&$-0.388$\\
+$11.54$&$0.139$&$-0.266$&$0.007$&$-0.422$\\
+$11.57$&$0.107$&$-0.281$&$0.011$&$-0.463$\\
+$11.61$&$0.059$&$-0.294$&$0.026$&$-0.493$\\
+$11.64$&$-0.003$&$-0.299$&$0.044$&$-0.485$\\
+$11.67$&$-0.056$&$-0.293$&$0.051$&$-0.452$\\
+$11.71$&$-0.092$&$-0.284$&$0.049$&$-0.415$\\
+$11.74$&$-0.117$&$-0.274$&$0.043$&$-0.384$\\
+$11.77$&$-0.135$&$-0.265$&$0.036$&$-0.362$\\
+$11.81$&$-0.147$&$-0.258$&$0.028$&$-0.349$\\
+$11.84$&$-0.154$&$-0.254$&$0.021$&$-0.346$\\
+$11.87$&$-0.156$&$-0.252$&$0.015$&$-0.355$\\
+$11.91$&$-0.153$&$-0.254$&$0.008$&$-0.374$\\
+$11.94$&$-0.143$&$-0.26$&$0$&$-0.404$\\
+$11.97$&$-0.123$&$-0.271$&$-0.012$&$-0.441$\\
+$12.01$&$-0.091$&$-0.284$&$-0.031$&$-0.478$\\
+$12.04$&$-0.04$&$-0.296$&$-0.055$&$-0.492$\\
+$12.07$&$0.018$&$-0.299$&$-0.07$&$-0.467$\\
+$12.11$&$0.061$&$-0.293$&$-0.072$&$-0.43$\\
+$12.14$&$0.093$&$-0.285$&$-0.066$&$-0.395$\\
+$12.17$&$0.116$&$-0.277$&$-0.055$&$-0.368$\\
+$12.21$&$0.135$&$-0.268$&$-0.043$&$-0.35$\\
+$12.24$&$0.149$&$-0.261$&$-0.03$&$-0.342$\\
+$12.27$&$0.159$&$-0.255$&$-0.017$&$-0.345$\\
+$12.31$&$0.164$&$-0.252$&$-0.004$&$-0.358$\\
+$12.34$&$0.164$&$-0.252$&$0.012$&$-0.382$\\
+$12.37$&$0.157$&$-0.256$&$0.032$&$-0.415$\\
+$12.41$&$0.14$&$-0.266$&$0.058$&$-0.453$\\
+$12.44$&$0.107$&$-0.281$&$0.091$&$-0.482$\\
+$12.47$&$0.055$&$-0.295$&$0.123$&$-0.475$\\
+$12.51$&$0.007$&$-0.299$&$0.136$&$-0.439$\\
+$12.54$&$-0.027$&$-0.298$&$0.137$&$-0.398$\\
+$12.57$&$-0.05$&$-0.294$&$0.13$&$-0.363$\\
+$12.61$&$-0.068$&$-0.29$&$0.121$&$-0.336$\\
+$12.64$&$-0.081$&$-0.287$&$0.111$&$-0.319$\\
+$12.67$&$-0.091$&$-0.284$&$0.102$&$-0.311$\\
+$12.71$&$-0.099$&$-0.281$&$0.094$&$-0.315$\\
+$12.74$&$-0.102$&$-0.28$&$0.088$&$-0.329$\\
+$12.77$&$-0.102$&$-0.28$&$0.081$&$-0.355$\\
+$12.81$&$-0.095$&$-0.282$&$0.071$&$-0.392$\\
+$12.84$&$-0.079$&$-0.287$&$0.056$&$-0.436$\\
+$12.87$&$-0.05$&$-0.294$&$0.03$&$-0.48$\\
+$12.91$&$-0.002$&$-0.299$&$-0.007$&$-0.495$\\
+$12.94$&$0.047$&$-0.296$&$-0.038$&$-0.467$\\
+$12.97$&$0.08$&$-0.289$&$-0.055$&$-0.426$\\
+$13.01$&$0.1$&$-0.283$&$-0.064$&$-0.387$\\
+$13.04$&$0.111$&$-0.279$&$-0.068$&$-0.355$\\
+$13.07$&$0.117$&$-0.276$&$-0.07$&$-0.331$\\
+$13.11$&$0.119$&$-0.276$&$-0.071$&$-0.317$\\
+$13.14$&$0.119$&$-0.276$&$-0.072$&$-0.314$\\
+$13.17$&$0.115$&$-0.277$&$-0.075$&$-0.321$\\
+$13.21$&$0.109$&$-0.279$&$-0.077$&$-0.339$\\
+$13.24$&$0.099$&$-0.283$&$-0.078$&$-0.369$\\
+$13.27$&$0.083$&$-0.288$&$-0.075$&$-0.409$\\
+$13.31$&$0.058$&$-0.294$&$-0.063$&$-0.455$\\
+$13.34$&$0.018$&$-0.299$&$-0.037$&$-0.491$\\
+$13.38$&$-0.034$&$-0.297$&$-0.001$&$-0.486$\\
+$13.41$&$-0.074$&$-0.289$&$0.027$&$-0.452$\\
+$13.44$&$-0.098$&$-0.281$&$0.046$&$-0.413$\\
+$13.48$&$-0.109$&$-0.277$&$0.059$&$-0.378$\\
+$13.51$&$-0.113$&$-0.275$&$0.07$&$-0.351$\\
+$13.54$&$-0.11$&$-0.276$&$0.079$&$-0.332$\\
+$13.58$&$-0.103$&$-0.279$&$0.088$&$-0.324$\\
+$13.61$&$-0.092$&$-0.283$&$0.099$&$-0.326$\\
+$13.64$&$-0.078$&$-0.288$&$0.111$&$-0.34$\\
+$13.68$&$-0.06$&$-0.292$&$0.124$&$-0.364$\\
+$13.71$&$-0.036$&$-0.296$&$0.133$&$-0.4$\\
+$13.74$&$-0.004$&$-0.299$&$0.135$&$-0.443$\\
+$13.78$&$0.041$&$-0.297$&$0.121$&$-0.478$\\
+$13.81$&$0.093$&$-0.285$&$0.092$&$-0.478$\\
+$13.84$&$0.132$&$-0.269$&$0.064$&$-0.451$\\
+$13.88$&$0.155$&$-0.257$&$0.043$&$-0.418$\\
+$13.91$&$0.168$&$-0.25$&$0.027$&$-0.389$\\
+$13.94$&$0.172$&$-0.246$&$0.013$&$-0.368$\\
+$13.98$&$0.17$&$-0.248$&$0.001$&$-0.356$\\
+$14.01$&$0.163$&$-0.253$&$-0.01$&$-0.354$\\
+$14.04$&$0.151$&$-0.259$&$-0.022$&$-0.362$\\
+$14.08$&$0.134$&$-0.268$&$-0.032$&$-0.382$\\
+$14.11$&$0.111$&$-0.279$&$-0.041$&$-0.412$\\
+$14.14$&$0.08$&$-0.289$&$-0.044$&$-0.45$\\
+$14.18$&$0.036$&$-0.297$&$-0.037$&$-0.485$\\
+$14.21$&$-0.022$&$-0.298$&$-0.018$&$-0.492$\\
+$14.24$&$-0.073$&$-0.289$&$-0.001$&$-0.466$\\
+$14.28$&$-0.109$&$-0.277$&$0.008$&$-0.431$\\
+$14.31$&$-0.131$&$-0.267$&$0.012$&$-0.4$\\
+$14.34$&$-0.145$&$-0.259$&$0.014$&$-0.376$\\
+$14.38$&$-0.152$&$-0.254$&$0.015$&$-0.361$\\
+$14.41$&$-0.154$&$-0.253$&$0.016$&$-0.356$\\
+$14.44$&$-0.151$&$-0.255$&$0.018$&$-0.362$\\
+$14.48$&$-0.143$&$-0.261$&$0.02$&$-0.379$\\
+$14.51$&$-0.127$&$-0.269$&$0.021$&$-0.406$\\
+$14.54$&$-0.103$&$-0.279$&$0.018$&$-0.442$\\
+$14.58$&$-0.067$&$-0.291$&$0.009$&$-0.479$\\
+$14.61$&$-0.014$&$-0.299$&$-0.009$&$-0.495$\\
+$14.64$&$0.044$&$-0.296$&$-0.024$&$-0.474$\\
+$14.68$&$0.087$&$-0.287$&$-0.027$&$-0.44$\\
+$14.71$&$0.118$&$-0.276$&$-0.024$&$-0.408$\\
+$14.74$&$0.14$&$-0.266$&$-0.017$&$-0.382$\\
+$14.78$&$0.156$&$-0.257$&$-0.009$&$-0.365$\\
+$14.81$&$0.167$&$-0.25$&$0.001$&$-0.358$\\
+$14.84$&$0.173$&$-0.245$&$0.011$&$-0.362$\\
+$14.88$&$0.174$&$-0.245$&$0.023$&$-0.377$\\
+$14.91$&$0.169$&$-0.248$&$0.036$&$-0.401$\\
+$14.94$&$0.156$&$-0.256$&$0.054$&$-0.433$\\
+$14.98$&$0.131$&$-0.27$&$0.078$&$-0.467$\\
+$15.01$&$0.09$&$-0.286$&$0.107$&$-0.484$\\
+$15.04$&$0.036$&$-0.297$&$0.127$&$-0.465$\\
+$15.08$&$-0.009$&$-0.299$&$0.131$&$-0.429$\\
+$15.11$&$-0.04$&$-0.296$&$0.125$&$-0.393$\\
+$15.14$&$-0.064$&$-0.291$&$0.115$&$-0.365$\\
+$15.18$&$-0.083$&$-0.286$&$0.103$&$-0.346$\\
+$15.21$&$-0.097$&$-0.282$&$0.091$&$-0.337$\\
+$15.24$&$-0.107$&$-0.278$&$0.079$&$-0.338$\\
+$15.28$&$-0.114$&$-0.275$&$0.068$&$-0.351$\\
+$15.31$&$-0.115$&$-0.275$&$0.057$&$-0.374$\\
+$15.34$&$-0.11$&$-0.277$&$0.042$&$-0.407$\\
+$15.38$&$-0.095$&$-0.283$&$0.022$&$-0.447$\\
+$15.41$&$-0.066$&$-0.291$&$-0.008$&$-0.484$\\
+$15.44$&$-0.02$&$-0.299$&$-0.044$&$-0.491$\\
+$15.48$&$0.028$&$-0.298$&$-0.069$&$-0.462$\\
+$15.51$&$0.061$&$-0.294$&$-0.08$&$-0.423$\\
+$15.54$&$0.082$&$-0.288$&$-0.084$&$-0.387$\\
+$15.58$&$0.096$&$-0.284$&$-0.083$&$-0.358$\\
+$15.61$&$0.105$&$-0.281$&$-0.08$&$-0.338$\\
+$15.64$&$0.111$&$-0.278$&$-0.077$&$-0.327$\\
+$15.68$&$0.115$&$-0.277$&$-0.073$&$-0.328$\\
+$15.71$&$0.115$&$-0.277$&$-0.07$&$-0.339$\\
+$15.74$&$0.112$&$-0.278$&$-0.067$&$-0.361$\\
+$15.78$&$0.104$&$-0.282$&$-0.06$&$-0.394$\\
+$15.81$&$0.088$&$-0.287$&$-0.047$&$-0.436$\\
+$15.84$&$0.06$&$-0.294$&$-0.023$&$-0.478$\\
+$15.88$&$0.016$&$-0.299$&$0.013$&$-0.495$\\
+$15.91$&$-0.032$&$-0.297$&$0.046$&$-0.472$\\
+$15.94$&$-0.064$&$-0.291$&$0.067$&$-0.433$\\
+$15.98$&$-0.082$&$-0.287$&$0.079$&$-0.395$\\
+$16.01$&$-0.091$&$-0.284$&$0.088$&$-0.364$\\
+$16.04$&$-0.093$&$-0.283$&$0.094$&$-0.341$\\
+$16.08$&$-0.091$&$-0.284$&$0.1$&$-0.327$\\
+$16.11$&$-0.085$&$-0.286$&$0.106$&$-0.324$\\
+$16.14$&$-0.076$&$-0.288$&$0.114$&$-0.332$\\
+$16.18$&$-0.064$&$-0.291$&$0.123$&$-0.351$\\
+$16.21$&$-0.047$&$-0.295$&$0.13$&$-0.381$\\
+$16.24$&$-0.023$&$-0.298$&$0.133$&$-0.42$\\
+$16.28$&$0.011$&$-0.299$&$0.125$&$-0.463$\\
+$16.31$&$0.057$&$-0.294$&$0.098$&$-0.486$\\
+$16.34$&$0.103$&$-0.282$&$0.066$&$-0.471$\\
+$16.38$&$0.133$&$-0.269$&$0.039$&$-0.44$\\
+$16.41$&$0.149$&$-0.261$&$0.019$&$-0.409$\\
+$16.44$&$0.156$&$-0.257$&$0.003$&$-0.384$\\
+$16.48$&$0.156$&$-0.257$&$-0.011$&$-0.366$\\
+$16.51$&$0.15$&$-0.26$&$-0.024$&$-0.358$\\
+$16.54$&$0.14$&$-0.266$&$-0.036$&$-0.361$\\
+$16.58$&$0.125$&$-0.273$&$-0.047$&$-0.374$\\
+$16.61$&$0.105$&$-0.281$&$-0.057$&$-0.399$\\
+$16.64$&$0.078$&$-0.289$&$-0.064$&$-0.432$\\
+$16.68$&$0.042$&$-0.297$&$-0.061$&$-0.47$\\
+$16.71$&$-0.007$&$-0.299$&$-0.046$&$-0.493$\\
+$16.75$&$-0.061$&$-0.292$&$-0.024$&$-0.48$\\
+$16.78$&$-0.1$&$-0.281$&$-0.008$&$-0.449$\\
+$16.81$&$-0.125$&$-0.27$&$0.002$&$-0.418$\\
+$16.85$&$-0.139$&$-0.263$&$0.009$&$-0.392$\\
+$16.88$&$-0.146$&$-0.258$&$0.014$&$-0.374$\\
+$16.91$&$-0.147$&$-0.258$&$0.019$&$-0.366$\\
+$16.95$&$-0.143$&$-0.26$&$0.025$&$-0.368$\\
+$16.98$&$-0.134$&$-0.266$&$0.03$&$-0.381$\\
+$17.01$&$-0.118$&$-0.273$&$0.035$&$-0.404$\\
+$17.05$&$-0.095$&$-0.283$&$0.036$&$-0.437$\\
+$17.08$&$-0.06$&$-0.292$&$0.032$&$-0.473$\\
+$17.11$&$-0.01$&$-0.299$&$0.018$&$-0.495$\\
+$17.15$&$0.047$&$-0.296$&$0.002$&$-0.482$\\
+$17.18$&$0.092$&$-0.285$&$-0.006$&$-0.451$\\
+$17.21$&$0.123$&$-0.274$&$-0.006$&$-0.419$\\
+$17.25$&$0.144$&$-0.263$&$-0.002$&$-0.393$\\
+$17.28$&$0.159$&$-0.254$&$0.004$&$-0.376$\\
+$17.31$&$0.169$&$-0.249$&$0.011$&$-0.369$\\
+$17.35$&$0.173$&$-0.245$&$0.019$&$-0.372$\\
+$17.38$&$0.173$&$-0.246$&$0.027$&$-0.385$\\
+$17.41$&$0.166$&$-0.251$&$0.039$&$-0.409$\\
+$17.45$&$0.151$&$-0.26$&$0.054$&$-0.44$\\
+$17.48$&$0.124$&$-0.274$&$0.075$&$-0.471$\\
+$17.51$&$0.081$&$-0.289$&$0.101$&$-0.485$\\
+$17.55$&$0.027$&$-0.298$&$0.118$&$-0.466$\\
+$17.58$&$-0.016$&$-0.299$&$0.121$&$-0.432$\\
+$17.61$&$-0.047$&$-0.295$&$0.114$&$-0.399$\\
+$17.65$&$-0.07$&$-0.29$&$0.104$&$-0.374$\\
+$17.68$&$-0.088$&$-0.285$&$0.093$&$-0.357$\\
+$17.71$&$-0.102$&$-0.28$&$0.081$&$-0.351$\\
+$17.75$&$-0.111$&$-0.276$&$0.069$&$-0.355$\\
+$17.78$&$-0.116$&$-0.275$&$0.057$&$-0.37$\\
+$17.81$&$-0.114$&$-0.275$&$0.043$&$-0.396$\\
+$17.85$&$-0.105$&$-0.279$&$0.026$&$-0.43$\\
+$17.88$&$-0.085$&$-0.286$&$0.002$&$-0.468$\\
+$17.91$&$-0.049$&$-0.295$&$-0.031$&$-0.492$\\
+$17.95$&$-0.001$&$-0.299$&$-0.062$&$-0.48$\\
+$17.98$&$0.039$&$-0.297$&$-0.079$&$-0.446$\\
+$18.01$&$0.066$&$-0.292$&$-0.086$&$-0.409$\\
+$18.05$&$0.084$&$-0.288$&$-0.086$&$-0.378$\\
+$18.08$&$0.096$&$-0.284$&$-0.084$&$-0.355$\\
+$18.11$&$0.105$&$-0.281$&$-0.08$&$-0.342$\\
+$18.15$&$0.11$&$-0.279$&$-0.075$&$-0.339$\\
+$18.18$&$0.112$&$-0.278$&$-0.071$&$-0.346$\\
+$18.21$&$0.111$&$-0.278$&$-0.065$&$-0.365$\\
+$18.25$&$0.105$&$-0.281$&$-0.057$&$-0.394$\\
+$18.28$&$0.092$&$-0.285$&$-0.044$&$-0.432$\\
+$18.31$&$0.068$&$-0.292$&$-0.021$&$-0.472$\\
+$18.35$&$0.029$&$-0.298$&$0.014$&$-0.495$\\
+$18.38$&$-0.018$&$-0.298$&$0.048$&$-0.478$\\
+$18.41$&$-0.052$&$-0.294$&$0.071$&$-0.442$\\
+$18.45$&$-0.072$&$-0.289$&$0.084$&$-0.405$\\
+$18.48$&$-0.082$&$-0.287$&$0.093$&$-0.373$\\
+$18.51$&$-0.086$&$-0.285$&$0.099$&$-0.35$\\
+$18.55$&$-0.084$&$-0.286$&$0.105$&$-0.337$\\
+$18.58$&$-0.079$&$-0.288$&$0.111$&$-0.333$\\
+$18.61$&$-0.071$&$-0.29$&$0.118$&$-0.341$\\
+$18.65$&$-0.059$&$-0.292$&$0.125$&$-0.359$\\
+$18.68$&$-0.043$&$-0.295$&$0.13$&$-0.388$\\
+$18.71$&$-0.02$&$-0.298$&$0.131$&$-0.427$\\
+$18.75$&$0.013$&$-0.299$&$0.12$&$-0.467$\\
+$18.78$&$0.058$&$-0.294$&$0.093$&$-0.486$\\
+$18.81$&$0.102$&$-0.282$&$0.061$&$-0.47$\\
+$18.85$&$0.13$&$-0.271$&$0.035$&$-0.441$\\
+$18.88$&$0.145$&$-0.263$&$0.015$&$-0.411$\\
+$18.91$&$0.151$&$-0.26$&$-0.001$&$-0.388$\\
+$18.95$&$0.15$&$-0.26$&$-0.014$&$-0.373$\\
+$18.98$&$0.144$&$-0.264$&$-0.027$&$-0.367$\\
+$19.01$&$0.133$&$-0.269$&$-0.038$&$-0.372$\\
+$19.05$&$0.117$&$-0.276$&$-0.049$&$-0.387$\\
+$19.08$&$0.096$&$-0.284$&$-0.058$&$-0.413$\\
+$19.11$&$0.068$&$-0.292$&$-0.061$&$-0.447$\\
+$19.15$&$0.028$&$-0.298$&$-0.054$&$-0.48$\\
+$19.18$&$-0.023$&$-0.298$&$-0.036$&$-0.492$\\
+$19.21$&$-0.072$&$-0.29$&$-0.016$&$-0.472$\\
+$19.25$&$-0.105$&$-0.279$&$-0.003$&$-0.442$\\
+$19.28$&$-0.126$&$-0.269$&$0.006$&$-0.413$\\
+$19.31$&$-0.138$&$-0.263$&$0.012$&$-0.391$\\
+$19.35$&$-0.143$&$-0.261$&$0.017$&$-0.378$\\
+$19.38$&$-0.142$&$-0.261$&$0.021$&$-0.375$\\
+$19.41$&$-0.136$&$-0.264$&$0.026$&$-0.381$\\
+$19.45$&$-0.124$&$-0.27$&$0.03$&$-0.399$\\
+$19.48$&$-0.105$&$-0.278$&$0.032$&$-0.426$\\
+$19.51$&$-0.077$&$-0.289$&$0.03$&$-0.461$\\
+$19.55$&$-0.035$&$-0.298$&$0.019$&$-0.49$\\
+$19.58$&$0.019$&$-0.299$&$0.003$&$-0.491$\\
+$19.61$&$0.069$&$-0.293$&$-0.008$&$-0.467$\\
+$19.65$&$0.105$&$-0.281$&$-0.01$&$-0.434$\\
+$19.68$&$0.13$&$-0.271$&$-0.008$&$-0.408$\\
+$19.71$&$0.147$&$-0.262$&$-0.002$&$-0.388$\\
+$19.75$&$0.159$&$-0.254$&$0.005$&$-0.378$\\
+$19.78$&$0.165$&$-0.251$&$0.013$&$-0.378$\\
+$19.81$&$0.167$&$-0.249$&$0.023$&$-0.388$\\
+$19.85$&$0.163$&$-0.255$&$0.034$&$-0.411$\\
+$19.88$&$0.15$&$-0.261$&$0.05$&$-0.437$\\
+$19.91$&$0.127$&$-0.273$&$0.071$&$-0.468$\\
+$19.95$&$0.089$&$-0.288$&$0.097$&$-0.485$\\
+$19.98$&$0.038$&$-0.297$&$0.117$&$-0.471$\\
+$20.02$&$-0.005$&$-0.298$&$0.123$&$-0.438$\\
+$20.05$&$-0.037$&$-0.295$&$0.12$&$-0.405$\\
+$20.08$&$-0.06$&$-0.291$&$0.111$&$-0.38$\\
+$20.12$&$-0.078$&$-0.287$&$0.101$&$-0.363$\\
+$20.15$&$-0.091$&$-0.283$&$0.09$&$-0.356$\\
+$20.18$&$-0.1$&$-0.28$&$0.079$&$-0.359$\\
+$20.22$&$-0.105$&$-0.279$&$0.067$&$-0.373$\\
+$20.25$&$-0.104$&$-0.278$&$0.054$&$-0.397$\\
+$20.28$&$-0.096$&$-0.282$&$0.037$&$-0.431$\\
+$20.32$&$-0.077$&$-0.288$&$0.014$&$-0.467$\\
+$20.35$&$-0.042$&$-0.296$&$-0.019$&$-0.492$\\
+$20.38$&$0.004$&$-0.299$&$-0.051$&$-0.482$\\
+$20.42$&$0.042$&$-0.296$&$-0.071$&$-0.45$\\
+$20.45$&$0.067$&$-0.292$&$-0.08$&$-0.414$\\
+$20.48$&$0.084$&$-0.287$&$-0.084$&$-0.384$\\
+$20.52$&$0.094$&$-0.285$&$-0.084$&$-0.362$\\
+$20.55$&$0.1$&$-0.282$&$-0.082$&$-0.349$\\
+$20.58$&$0.103$&$-0.281$&$-0.08$&$-0.347$\\
+$20.62$&$0.104$&$-0.281$&$-0.077$&$-0.355$\\
+$20.65$&$0.1$&$-0.282$&$-0.074$&$-0.374$\\
+$20.68$&$0.092$&$-0.285$&$-0.067$&$-0.403$\\
+$20.72$&$0.076$&$-0.29$&$-0.054$&$-0.441$\\
+$20.75$&$0.05$&$-0.295$&$-0.031$&$-0.478$\\
+$20.78$&$0.009$&$-0.299$&$0.004$&$-0.494$\\
+$20.82$&$-0.035$&$-0.297$&$0.036$&$-0.474$\\
+$20.85$&$-0.064$&$-0.291$&$0.059$&$-0.44$\\
+$20.88$&$-0.08$&$-0.288$&$0.074$&$-0.406$\\
+$20.92$&$-0.087$&$-0.284$&$0.085$&$-0.377$\\
+$20.95$&$-0.088$&$-0.284$&$0.093$&$-0.358$\\
+$20.98$&$-0.084$&$-0.285$&$0.101$&$-0.348$\\
+$21.02$&$-0.076$&$-0.287$&$0.11$&$-0.349$\\
+$21.05$&$-0.064$&$-0.29$&$0.118$&$-0.361$\\
+$21.08$&$-0.049$&$-0.293$&$0.126$&$-0.383$\\
+$21.12$&$-0.027$&$-0.296$&$0.13$&$-0.416$\\
+
+
 \end{tabular}
 \normalsize
 \caption{Verlauf der Position der beiden Massen über die Zeit des Versuchs. Dabei wird t in s und die Position in m gemessen.}
 \label{xy-table}
 \end{table}
-
-
-
+\nopagebreak
 \begin{figure}
 \centering
 \includegraphics[width=.6\textwidth]{images/pendel-skizze.png}
+\caption{Technische Zeichnung des Pendels}
 \label{pic:skizze_versuchsaufbau}
 \end{figure}
+
+
+\begin{figure}
+\begin{verbatim}
+
+from math import* # Einbinden von mathematischen Funktionen
+
+def quadr(a): # Quadratfunktion
+        return(a*a)
+
+def simu(t0, x1, y1, x2, y2, phi_1, phi_2, intervall, laenge_sim, 
+anz_schritte_pro_ausgabe): 
+        m1 = 0.3 # obere Masse
+        m2 = 0.3 # untere Masse
+        l1 = sqrt(quadr(x1) + quadr(y1)) # Länge des oberen Pendels
+        l2 = sqrt(quadr(x2-x1) + quadr(y2-y1)) # Länge des unteren Pendels
+        phi1 = atan(-x1/y1) # Winkel des ersten Pendels zur Senkrechten,
+        Konvention: Winkel im 4. Quadraten sind positiv
+        phi2 = atan((x1-x2)/(y2-y1))
+        t = t0 # Startzeitpunkt
+        g = 9.81 # Ortsfaktor
+        M = m1+m2 # Gesamtmasse
+        phi__1 = 0 # zur anfänglichen Berechnung werden 
+die Winkelbeschleunigungen auf Null gesetzt
+        phi__2 = 0
+        zaehler = anz_schritte_pro_ausgabe
+        while t < laenge_sim:
+                if(zaehler == anz_schritte_pro_ausgabe):
+                        print(t, '\t', sin(phi1)*l1, '\t', -
+cos(phi1)*l1,'\t', sin(phi1)*l1+sin(phi2)*l2, '\t', -cos(phi1)*l1- cos(phi2)*l2)
+                        zaehler = 0 # Ausgabeschleife
+                zaehler += 1
+                phi_1_alt = phi_1
+                phi_2_alt = phi_2
+                phi__1_alt = phi__1
+                phi__2_alt = phi__2
+                dphi = phi1 - phi2
+                phi__1 = (-m2*l2*quadr(phi_2)*sin(dphi) - g*M*sin(phi1) -
+m2*l1*quadr(phi_1)*sin(dphi)*cos(dphi) +
+g*m2*sin(phi2)*cos(dphi))/(M*l1-m2*l1*quadr(cos(dphi)))
+                phi__2 = (-m2*l2*quadr(phi_2)*sin(dphi)*cos(dphi)
+-g*M*sin(phi1)*cos(dphi)-M*l1*quadr(phi_1)*sin(dphi) +
+g*M*sin(phi2))/(m2*l2*quadr(cos(dphi)) - M*l2)
+                phi_1 += (phi__1+phi__1_alt)/2 *intervall
+                phi_2 += (phi__2_alt + phi__2)/2 * intervall
+                phi1 += (phi_1 + phi_1_alt)/2 * intervall
+                phi2 += (phi_2 + phi_2_alt)/2 * intervall
+                t += intervall
+\end{verbatim}
+\label{code1}
+\caption{Implementierung der Simulation in python}
+\end{figure}
+
