--- a/versuch_3/anhang.tex
+++ b/versuch_3/anhang.tex
@@ -13,15 +13,15 @@
 
 \begin{center}
 \begin{longtable}{lllll}
-\caption{Verlauf der Position der beiden Massen über die Zeit des Versuchs. Dabei wird t in s und die Position in m gemessen.} \label{xy-table}\\
+\caption{Verlauf der Position der beiden Massen über die Zeit des Versuchs. Dabei wird t in s und die Position in m gemessen. (Jeder 10. Messpunkt wird dargestellt.)} \label{xy-table}\\
 \hline
-t & x-Pos. $m_1$ & y-Pos $m_1$ & x-Pos. $m_2$ & y-Pos. $m_2$ \\
+\textbf{t} & \textbf{x-Pos. $m_1$} & \textbf{y-Pos $m_1$} & \textbf{x-Pos. $m_2$} & \textbf{y-Pos. $m_2$} \\
 \hline
 \endfirsthead
 \multicolumn{4}{c}%
 {\tablename\ \thetable\ -- \textit{Fortsetzung}} \\
 \hline
-t & x-Pos. $m_1$ & y-Pos $m_1$ & x-Pos. $m_2$ & y-Pos. $m_2$ \\
+\textbf{t} & \textbf{x-Pos. $m_1$} & \textbf{y-Pos $m_1$} & \textbf{x-Pos. $m_2$} & \textbf{y-Pos. $m_2$} \\
 \hline
 \endhead
 \hline \multicolumn{4}{r}{\textit{Fortsetzung auf der nächsten Seite}} \\
