--- a/versuch_3/protokoll.tex
+++ b/versuch_3/protokoll.tex
@@ -8,6 +8,7 @@
 \author{Udo Beier \and Leon Brückner \and Valentin Olpp \and Marco Zech \and Sebastian Ziegler}
 \maketitle
 \tableofcontents
+\newpage
 \listoffigures
 \listoftables
 \newpage
